# EE451_IntroductiontoRobotics

./: LICENSE  README.md
src/project_ppprobot/: CMakeLists.txt  package.xml
src/project_ppprobot/config/: ppp_control.yaml
src/project_ppprobot/include/project_ppprobot/: control_robot.hpp  spawn_cube.hpp
src/project_ppprobot/launch/: robot.launch
src/project_ppprobot/src/: Readme.md  control_robot.cpp  main.cpp  spawn_cube.cpp  spawn_cube_main.cpp
src/project_ppprobot/urdf/: cube.urdf  robot.urdf
src/project_ppprobot/worlds/: my_world.world
src/rrrbot/: CMakeLists.txt  package.xml  readme.txt
src/rrrbot/config/: controller_parameters.yaml
src/rrrbot/include/: inverse_kinematics.hpp  kinematics.h  sphere_spawner.hpp  velocity_kinematics.hpp
src/rrrbot/launch/: run_controllers.launch  spawn_robot.launch
src/rrrbot/src/: inverse_kinematics.cpp  kinematics.cpp  random_kinematics.cpp  sphere_spawner.cpp  test_velocity_kinematics.cpp  touch_sphere.cpp  velocity_kinematics.cpp  visualize_workspace.cpp
src/rrrbot/urdf/: rrrbot.urdf
src/rrrbot/worlds/: hello.world
src/turtlebot/: CMakeLists.txt  package.xml  readme.txt
src/turtlebot/config/: controller_parameters.yaml  robot_task.txt
src/turtlebot/include/: robot_controller.hpp  to_euler.h
src/turtlebot/launch/: spawn_robot.launch
src/turtlebot/meshes/: turtlebot_create.dae
src/turtlebot/src/: main_task2.cpp  random_velocities.cpp  robot_controller.cpp  to_euler.cpp
src/turtlebot/urdf/: turtlebot.urdf
