<?xml version="1.0"?>
<package format="2">

  <name>turtlebot</name>
  <version>0.1.0</version>
  <description>A package to simulate and control a Turtlebot Create</description>
  
  <maintainer email="your@email.com">your_name</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>gazebo_msgs</depend>
  <depend>controller_manager</depend>
  <depend>effort_controllers</depend>
  <depend>robot_state_publisher</depend>
  <depend>std_msgs</depend>
  <depend>geometry</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
  
</package>
